resources/tests/valid_syntax/parens.ct
//Compilation successful!
fn hello()->i32: (10 + 10) + (10 + (10));